manifests/clone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: swiftserve-cloning
  name: swiftserve-cloning
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swiftserve-cloning
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: swiftserve-cloning
    spec:
      containers:
      - image: shabbirdocks/swiftserve-clones-stuff:2
        imagePullPolicy: IfNotPresent
        name: swiftserve-clones-stuff
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
