manifests/serve.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2024-02-15T03:43:20Z"
  generation: 1
  labels:
    app: swiftserve-serving
  name: swiftserve-serving
  namespace: default
  resourceVersion: "407824"
  uid: 1e16fc06-36b5-4d59-9b24-4b1b517852c8
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: swiftserve-serving
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: swiftserve-serving
    spec:
      containers:
      - image: shabbirdocks/swift-serves-stuff:2
        imagePullPolicy: IfNotPresent
        name: swift-serves-stuff
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-02-15T03:43:21Z"
    lastUpdateTime: "2024-02-15T03:43:31Z"
    message: ReplicaSet "swiftserve-serving-7b8db4d64" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-02-15T03:55:52Z"
    lastUpdateTime: "2024-02-15T03:55:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
